Add default styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,94 @@
 :root {
---Blue: hsl(246, 80%, 60%)
---Light_red: hsl(15, 100%, 70%)
---Soft_blue: hsl(195, 74%, 62%)
---Light_red: hsl(348, 100%, 68%)
---Lime_green: hsl(145, 58%, 55%)
---Violet: hsl(264, 64%, 52%)
---Soft_orange: hsl(43, 84%, 65%)
---Very_dark blue: hsl(226, 43%, 10%)
---Dark_blue: hsl(235, 46%, 20%)
---Desaturated_blue: hsl(235, 45%, 61%)
---Pale_Blue: hsl(236, 100%, 87%)
+  --blue: hsl(246, 80%, 60%);
+  --light_red: hsl(15, 100%, 70%);
+  --soft_blue: hsl(195, 74%, 62%);
+  --light_red: hsl(348, 100%, 68%);
+  --lime_green: hsl(145, 58%, 55%);
+  --violet: hsl(264, 64%, 52%);
+  --soft_orange: hsl(43, 84%, 65%);
+  --very_dark_blue: hsl(226, 43%, 10%);
+  --dark_blue: hsl(235, 46%, 20%);
+  --desaturated_blue: hsl(235, 45%, 61%);
+  --pale_blue: hsl(236, 100%, 87%);
+  --white: #fff;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: all 0.2s ease-in-out;
 }
-a:hover {
-  color: #535bf2;
+
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+  line-height: 0;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+button {
+  outline: none;
+  border: none;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+@mixin mq($size) {
+  @media screen and (max-width: $size) {
+    @content;
+  }
+}
+
+html:focus-within {
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  justify-content: center;
-  min-width: 320px;
+  padding: 0;
   min-height: 100vh;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--very_dark_blue);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  padding: 0;
+  margin: 0;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+ul,
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
