--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 
+  margin: auto;
+}
