--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -11,11 +11,15 @@ section {
     padding-bottom: 80px;
     border-radius: 15px;
     border-radius: 15px;
+    margin-bottom: 26px;
     .profile_img {
-      width: 78px;
-      height: 78px;
+      width: 84px;
+      height: 84px;
       border: 3px solid var(--white);
       border-radius: 50%;
+      margin-bottom: 40px;
+      margin-left: -3px;
+      margin-top: -3px;
     }
   }
   .report {
@@ -23,6 +27,7 @@ section {
     font-size: 15px;
     line-height: 18px;
     color: var(--pale_blue);
+    margin-bottom: 3px;
   }
   .name {
     font-weight: 300;
@@ -33,6 +38,11 @@ section {
   .list {
     background: var(--dark_blue);
     border-radius: 15px;
+    padding-left: 32px;
+    padding-bottom: 32px;
+    :not(:last-child) {
+      margin-bottom: 21px;
+    }
     .period {
       font-weight: 400;
       font-size: 18px;
