--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -51,6 +51,7 @@ section {
       list-style-type: none;
       &:hover {
         cursor: pointer;
+        color: var(--white);
       }
     }
   }
