--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: 30px;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100%;
-
   margin: auto;
 }
