--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --blue: hsl(246, 80%, 60%);
-  --light_red: hsl(15, 100%, 70%);
+  --light_redd: hsl(15, 100%, 70%);
   --soft_blue: hsl(195, 74%, 62%);
   --light_red: hsl(348, 100%, 68%);
   --lime_green: hsl(145, 58%, 55%);
@@ -10,6 +10,7 @@
   --dark_blue: hsl(235, 46%, 20%);
   --desaturated_blue: hsl(235, 45%, 61%);
   --pale_blue: hsl(236, 100%, 87%);
+  --hover_blue: hsla(236, 41%, 34%, 1);
   --white: #fff;
 }
 
