--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -4,6 +4,7 @@ section {
   background: var(--dark_blue);
   border-radius: 15px;
   max-width: 255px;
+  width: 100%;
   .about {
     background-color: var(--blue);
     padding-top: 37px;
