--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  transition: all 0.2s ease-in-out;
+  // transition: all 0.2s ease-in-out;
 }
 
 img,
@@ -68,6 +68,7 @@ html:focus-within {
 body {
   margin: 0;
   padding: 0;
+  padding-inline: 24px;
   min-height: 100vh;
   font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
