--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -1,10 +1,14 @@
-@import '../../index.css';
+@import '../../index.scss';
 
 section {
   background: var(--dark_blue);
   border-radius: 15px;
   max-width: 255px;
   width: 100%;
+  @include mq(1083px) {
+    max-width: 330px;
+    width: 100%;
+  }
   .about {
     background-color: var(--blue);
     padding-top: 37px;
