Fix mobile styles

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -13,6 +13,7 @@
     height: auto;
     flex-direction: column;
     padding-block: 81px;
+    gap: 24px;
   }
 }
 
@@ -28,5 +29,6 @@
     flex-direction: column;
     max-width: 330px;
     width: 100%;
+    gap: 24px;
   }
 }
