--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -17,6 +17,17 @@ section {
     border-radius: 15px;
     border-radius: 15px;
     margin-bottom: 26px;
+    @include mq(1083px) {
+      padding-top: 33px;
+      padding-bottom: 31px;
+    }
+    .about_info {
+      @include mq(1083px) {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+      }
+    }
     .profile_img {
       width: 84px;
       height: 84px;
@@ -25,6 +36,12 @@ section {
       margin-bottom: 40px;
       margin-left: -3px;
       margin-top: -3px;
+      @include mq(1083px) {
+        width: 70px;
+        height: 70px;
+        margin-bottom: 0px;
+        margin-top: 0px;
+      }
     }
   }
   .report {
@@ -39,6 +56,11 @@ section {
     font-size: 40px;
     line-height: 47px;
     color: var(--white);
+    @include mq(1083px) {
+      font-weight: 300;
+      font-size: 24px;
+      line-height: 28px;
+    }
   }
   .list {
     background: var(--dark_blue);
@@ -55,6 +77,7 @@ section {
         margin-bottom: 0px;
       }
       padding-left: 0px;
+      padding-bottom: 25px;
     }
     .period {
       font-weight: 400;
